scrollbar bug fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@ html {
 	-webkit-font-smoothing: antialiased;
 	margin: 0;
 	padding: 0;
-	overflow-x: hidden;
+	overflow: visible;
 }
 
 body {
